--- a/Sign up/templates/Sign up/Sign up.html
+++ b/Sign up/templates/Sign up/Sign up.html
@@ -1,51 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign in page</title>
-  <link rel="stylesheet" href="Sign up.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFKKxLhei659CQXFEbbKuqL" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <style>
-    body {
-      background-image: url('https://wallpaperaccess.com/full/4933388.jpg');
-      background-size: cover;
-      background-position: center;
-      background-attachment: fixed; /* Keeps the background fixed while scrolling */
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Seek Coding</title>
+    <link rel="stylesheet" href="sign.css">
 </head>
 <body>
-  <div class="login">
-    <form action="">
-      <h1>Sign up</h1>
-      <div class="box02">
-        <input type="text" class="input" placeholder="First Name" autocomplete="off">
-      </div>
-      <div class="box03">
-        <input type="password" class="input" placeholder="Last Name" autocapitalize="off">
-      </div>
-            <div class="box04">
-        <input type="text" class="input" placeholder="Email Id" autocomplete="off">
-      </div> 
-   <div class="box05">
-        <input type="text" class="input" placeholder="Password" autocomplete="off">
-      </div>    
-      <div class="box08">
-        <button class="button">Sign up</button>
-      </div>
-      <div class="box09">
-        <p>or</p>
-      </div>
-      <div class="btn">
-        <button class="fb-btn">
-          <i class="fa-brands fa-facebook"></i> Facebook
-        </button>
-        <button class="google-btn">
-          <i class="fa-brands fa-google"></i> Google
-        </button>
-      </div>
-    </form>
-  </div>
+    <div class="full-page">
+        <div class="navbar">
+            <div>
+                <a href='website.html'>Car Mart </a>
+            </div>
+            <nav>
+                <ul id='MenuItems'>
+                    <li><a href='#'>Home</a></li>
+                    <li><a href='#'>About Us</a></li>
+                    <li><a href='#'>Services</a></li>
+                    <li><a href='#'>Contact</a></li>
+                    <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'" style="width:auto;">Login</button></li>
+                </ul>
+            </nav>
+        </div>
+        <div id='login-form' class='login-page'>
+            <div class="form-box">
+                <div class='button-box'>
+                    <div id='btn'></div>
+                    <button type='button' onclick='login()' class='toggle-btn'>Log In</button>
+                    <button type='button' onclick='register()' class='toggle-btn'>Register</button>
+                </div>
+                <form id='login' class='input-group-login'>
+                   
+                </form>
+                <form id='register' class='input-group-register'>
+                    <input type='text' class='input-field' placeholder='First Name' required>
+                    <input type='text' class='input-field' placeholder='Last Name' required>
+                    <input type='email' class='input-field' placeholder='Email Id' required>
+                    <input type='password' class='input-field' placeholder='Enter Password' required>
+                    <input type='password' class='input-field' placeholder='Confirm Password' required>
+                    <input type='checkbox' class='check-box'><span>I agree to the terms and conditions</span>
+                    <button type='submit' class='submit-btn'>Register</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script>
+        var x = document.getElementById('login');
+        var y = document.getElementById('register');
+        var z = document.getElementById('btn');
+        function register() {
+            x.style.left = '-400px';
+            y.style.left = '50px';
+            z.style.left = '110px';
+        }
+        function login() {
+            x.style.left = '50px';
+            y.style.left = '450px';
+            z.style.left = '0px';
+        }
+    </script>
+    <script>
+        var modal = document.getElementById('login-form');
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
