--- a/Login/templates/Login/Log in.html
+++ b/Login/templates/Login/Log in.html
@@ -34,7 +34,15 @@
                     <input type='checkbox' class='check-box'><span>Remember Password</span>
                     <button type='submit' class='submit-btn'>Log in</button>
                 </form>
-                
+                <form id='register' class='input-group-register'>
+                    <input type='text' class='input-field' placeholder='First Name' required>
+                    <input type='text' class='input-field' placeholder='Last Name' required>
+                    <input type='email' class='input-field' placeholder='Email Id' required>
+                    <input type='password' class='input-field' placeholder='Enter Password' required>
+                    <input type='password' class='input-field' placeholder='Confirm Password' required>
+                    <input type='checkbox' class='check-box'><span>I agree to the terms and conditions</span>
+                    <button type='submit' class='submit-btn'>Register</button>
+                </form>
             </div>
         </div>
     </div>
