--- a/Home/static/homestyle.css
+++ b/Home/static/homestyle.css
@@ -1,139 +1,198 @@
-/* Reset and basic styling */
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f1f1f1;
-  color: #333;
+
+.full-page {
+    height: 100%;
+    width: 100%;
+    background-image: url('https://www.ecorentacar.com/blog/wp-content/uploads/2019/09/Car-Image.jpg');
+    background-position: center;
+    background-size: cover;
+    position: absolute;
 }
 
-.header {
-  background-color: #333;
-  padding: 1rem 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 20px 30px 50px 50px;
+}
+
+nav {
+    flex: 1;
+    text-align: right;
 }
 
 nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    display: inline-block;
+    list-style: none;
 }
 
-nav li {
-  display: inline;
-  margin-right: 20px;
+nav ul li {
+    display: inline-block;
+    margin-right: 70px;
 }
 
-nav a {
-  text-decoration: none;
-  color: #fff;
-  font-weight: bold;
+nav ul li a {
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    font-family: sans-serif;
 }
 
-.header .logo {
-  display: flex;
-  align-items: center;
-  margin-left: 20px;
+nav ul li button {
+    font-size: 20px;
+    color: white;
+    outline: none;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    font-family: sans-serif;
 }
 
-.header .logo img {
-  width: 40px; /* Adjust the size of the logo as needed */
+nav ul li button:hover {
+    color: aqua;
 }
 
-section {
-  padding: 2rem;
+nav ul li a:hover {
+    color: aqua;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    font-size: 40px;
+}
+
+#login-form {
+    display: none;
+}
+
+.form-box {
+    width: 850px;
+    height: 550px;
+    position: relative; /* Set to relative to allow pseudo-element positioning */
+    margin: auto;
+    background: rgba(0, 0, 0, 0.8);
+    padding: 10px;
+    overflow: hidden;
+}
+
+.form-box::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border: 2px solid transparent;
+    animation: pulseBorder 2s ease infinite;
+}
+
+@keyframes pulseBorder {
+    0% {
+        border-color: transparent;
+    }
+    50% {
+        border-color: #ff7200; /* Change to your desired border color */
+    }
+    100% {
+        border-color: transparent;
+    }
+}
+
+
+#btn {
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    background: #F3C693;
+    border-radius: 30px;
+    transition: 0.5s;
+}
+
+.submit-btn {
+    width: 20%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin:25px auto;
+    background: #F3C693;
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+    animation: fadeIn 3s ease-in;
+}
+.submit-btn:hover{
+  background-color:#F3C693;
+  color: aliceblue;
+}
+
+p {
+  font-size: 15px; 
+  color:white; 
   text-align: center;
+  margin-top: 24px;
+ }
+
+.icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    animation: fadeIn 3s ease-in;
 }
 
-.welcome {
-  background-image: url("https://wallpaperaccess.com/full/4933473.jpg");
-  background-size: cover;
-  background-position: center;
-  color: #fff;
+.icons a {
+    text-decoration: none;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.welcome h1 {
-  font-size: 3rem;
+.icons ion-icon {
+    color: #fff;
+    font-size: 30px;
+    transition: 0.3s ease;
+    display: flex;
+    padding-left: 10px;
+    padding-top:5px;
+    justify-content: center;
+    align-items: center;
 }
 
-.btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  background-color: #333;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  margin-top: 1rem;
+.icons ion-icon:hover {
+    color: #ff7200;
 }
 
-.about {
-  background-color: #fff;
+h1 {
+    font-size: 60px;
+    color: white;
+    margin-top: 120px;
+    text-align: center;
+    animation: fadeIn 3s ease-in;
 }
 
-.about h2 {
-  font-size: 2rem;
-  color: #333;
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
-.brand-gallery {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: auto;
-  white-space: nowrap;
-}
 
-.brand-gallery img {
-  max-width: 100px;
-  margin: 0 1rem;
-  transition: transform 0.3s ease-in-out;
-}
+p  {
+            font-size: 20px;
+            color:White;
+            margin-top:10px;
+            text-align: center; 
+            animation: fadeIn 10s; 
+        }
 
-.brand-gallery img:hover {
-  transform: scale(1.1);
-}
-
-.contact {
-  background-color: #333;
-  color: #fff;
-}
-
-.contact h2 {
-  font-size: 2rem;
-}
-
-.contact p {
-  margin: 0.5rem 0;
-}
-
-.social-media a {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  font-size: 1.5rem;
-  text-decoration: none;
-  transition: background-color 0s, transform 0.3s;
-  color: #fff; /* Set the default color to white */
-}
-
-.social-media a.fab.fa-facebook {
-  background-color: #1877f2; /* Facebook blue color */
-}
-
-.social-media a.fab.fa-instagram {
-  background-color: #c32aa3; /* Instagram pink color */
-}
-
-.social-media a:hover {
-  background-color: #555;
-  transform: scale(1.1);
-}
