--- a/Car listing page/static/styles.css
+++ b/Car listing page/static/styles.css
@@ -40,7 +40,7 @@ header {
 }
 
 button {
-    background-color: #333;
+    background-color: #bdb76b ;
     color: #fff;
     padding: 8px 12px;
     border: none;
