--- a/Car listing page/templates/car listing.html
+++ b/Car listing page/templates/car listing.html
@@ -14,19 +14,19 @@
 
     <div class="car-list">
         <div class="car-card" id="car1">
-            <img src="car1.jpg" alt="Car 1" class="car-img">
-            <h2>Car 1</h2>
-            <p>Price: $30,000</p>
-            <button onclick="toggleDescription('car1')">Show Description</button>
-            <p class="car-description">A stylish and efficient car with advanced features.</p>
+            <img src="https://th.bing.com/th/id/OIP.u3z76UsyXzdbBBQCYQPhiAAAAA?pid=ImgDet&rs=1" class="car-img">
+            <h2>2018 Ford Mustang</h2>
+            <p>Price: Rs.30000000</p>
+            <button onclick="toggleDescription('car1')">Description of the Car </button>
+            <p class="car-description">A powerful performance, distinctive design, and modern features.</p>
         </div>
 
         <div class="car-card" id="car2">
-            <img src="car2.jpg" alt="Car 2" class="car-img">
-            <h2>Car 2</h2>
-            <p>Price: $25,000</p>
-            <button onclick="toggleDescription('car2')">Show Description</button>
-            <p class="car-description">A compact car with excellent fuel efficiency.</p>
+            <img src="https://www.ccarprice.com/products/Hyundai_Elantra_Hybrid_Blue_2023.jpg" alt="Car 2" class="car-img">
+            <h2>Hyundai Elantra Hybrid Blue</h2>
+            <p>Price: Rs.40000000</p>
+            <button onclick="toggleDescription('car2')">Description of the Car </button>
+            <p class="car-description">A fuel-efficient and eco-friendly version of the popular Elantra sedan.</p>
         </div>
 
         <!-- Add more cars as needed -->
