Second version of styles.css

--- a/product card/static/styles.css
+++ b/product card/static/styles.css
@@ -42,7 +42,7 @@ input {
 
 button {
     padding: 8px;
-    background-color: #4CAF50;
+    background-color:#bdb76b ;
     color: white;
     border: none;
     cursor: pointer;
