--- a/auctions/templates/auctions/categories.html
+++ b/auctions/templates/auctions/categories.html
@@ -6,6 +6,6 @@
         <input type="text" class="form-control" name="category"
                placeholder="Enter a category like cards, vehicle, etc..." autofocus>
         <br>
-        <input type="submit" class="btn btn-primary" value="Filter">
+        <input type="submit" class="btn btn-primary" value="Search">
     </form>
 {% endblock %}
